--- a/docs/cloud/guides/enable-slack-alerts.mdx
+++ b/docs/cloud/guides/enable-slack-alerts.mdx
@@ -2,10 +2,10 @@
 title: "Enable alerts"
 ---
 
-## About Slack alerts
+## About alerts
 
 <Snippet file="alerts/alerts-introduction.mdx" />
 
-## Setup Slack Integration
+## Alerts destinations
 
-On the environment configuration in page, connect to Slack and configure a default channel.
+<Snippet file="cloud/integrations/cards-groups/alerts-destination-cards.mdx" />
