--- a/docs/features/lineage.mdx
+++ b/docs/features/lineage.mdx
@@ -15,12 +15,15 @@ To see additional information in the lineage view, use the `...` menu right to t
 - **Test results**: Access the table latest test results in the lineage view.
 - **Node info**: See details such as description, owner and tags. If collected, it will include the latest job info.
 
-<Frame>
-  <img
-    src="https://res.cloudinary.com/diuctyblm/image/upload/v1700489805/lineage_q75rks.gif"
-    alt="Elementary Lineage"
-  />
-</Frame>
+<iframe
+width="700"
+height="400"
+src="https://res.cloudinary.com/diuctyblm/video/upload/v1710790204/colum-level-lineage-to-bi-better_c00lz0.mp4"
+frameborder="0"
+allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+allowfullscreen
+alt="Elementary Lineage"
+></iframe>
 
 ## Job info in lineage
 
