minor docs fixes

--- a/docs/features/data-tests.mdx
+++ b/docs/features/data-tests.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Elementary Data Tests"
 icon: "monitor-waveform"
+sidebarTitle: "Data Tests"
 ---
 
 Elementary provides tests for detection of data quality issues.
