--- a/docs/features/exposures-lineage.mdx
+++ b/docs/features/exposures-lineage.mdx
@@ -1,6 +1,6 @@
 ---
-title: Lineage to Downstream Exposures
-sidebarTitle: Exposures & BI Integrations
+title: Lineage to Downstream Dashboards
+sidebarTitle: BI Integrations
 ---
 
 Some of your data is used downstream in dashboards, applications, data science pipelines, reverse ETLs, etc.
