ELE-489 Support dbt-trino connector (#1378)
* ELE-489 Support dbt-trino connector

* Force get_adapter_type_and_unique_id to fail, therefore setting warehouse_type to null

* Bump internal dbt-data-reliability Package

* get_adapter_type_and_unique_id - fix for athena and trino

* link_local_elementary_dbt_pkg: bugfix

* add (temporarily) new index html

* pyproject: reduce dbt-trino lower version limit

* Update index.html to v1.0.18

* update dbt package ref

---------

Co-authored-by: Itamar Hartstein <haritamar@gmail.com>

--- a/docs/data-tests/schema-tests/schema-changes-from-baseline.mdx
+++ b/docs/data-tests/schema-tests/schema-changes-from-baseline.mdx
@@ -18,7 +18,7 @@ Supported parameters for the test:
 
 <Info>
   Supported in Databricks with Unity Catalog only. <br/>
-  Not supported in Athena.
+  Not supported in Athena or Trino.
 </Info>
 
 ### Auto-generate baseline schema
