--- a/docs/data-tests/schema-tests/schema-changes.mdx
+++ b/docs/data-tests/schema-tests/schema-changes.mdx
@@ -9,7 +9,7 @@ Data Types note: Snowflake, Redshift and Postgres all has "synonym" data types, 
 
 <Info>
   Supported in Databricks with Unity Catalog only. <br/>
-  Not supported in Athena.
+  Not supported in Athena or Trino.
 </Info>
 
 <RequestExample>
