change offering names

--- a/docs/_snippets/quickstart/quickstart-cards.mdx
+++ b/docs/_snippets/quickstart/quickstart-cards.mdx
@@ -1,6 +1,6 @@
 <CardGroup cols={2}>
   <Card
-    title="Elementary (Cloud service)"
+    title="Elementary Cloud Platform"
     icon="cloud"
     iconType="solid"
     href="https://elementary-data.frontegg.com/oauth/account/sign-up"
@@ -17,7 +17,7 @@
     />
   </Card>
   <Card
-    title="Elementary Community (OSS)"
+    title="Elementary OSS Package"
     icon="square-terminal"
     iconType="solid"
   >
