change offering names

--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -13,7 +13,7 @@ icon: "fire"
 </div>
 
 
-Elementary has two product offerings:
+Elementary includes two products:
 
 <Snippet file="quickstart/quickstart-cards.mdx" />
 
