--- a/docs/_snippets/quickstart/quickstart-cards.mdx
+++ b/docs/_snippets/quickstart/quickstart-cards.mdx
@@ -6,7 +6,7 @@
     href="https://elementary-data.frontegg.com/oauth/account/sign-up"
   >
     <br />
-        Ideal for teams monitoring mission-critical data pipelines, requiring guaranteed uptime and reliability, short-time-to-value, advanced features, collaboration, and professional support.
+        Built on top of the OSS package, ideal for teams monitoring mission-critical data pipelines, requiring guaranteed uptime and reliability, short-time-to-value, advanced features, collaboration, and professional support.
     <br />
         The solution is secure by design, and requires no access to your data from cloud.
     <br />
