--- a/docs/overview/cloud-vs-oss.mdx
+++ b/docs/overview/cloud-vs-oss.mdx
@@ -35,7 +35,7 @@ An open-source CLI tool you can deploy and orchestrate to send Slack alerts and 
 | Slack and MS Teams alerts                                             |          ✅          |         ✅         |
 | Alert distribution rules, multiple <br/> destinations, custom formats |          ❌          |         ✅         |
 | Additional alert destinations: <br/> PagerDuty, OpsGenie, Webhook     |          ❌          |         ✅         |
-| 🚧 *Alert actions*                                                    |          ❌          |         ✅         |
+| Alert actions                                                    |          ❌          |         ✅         |
 | Data catalog                                                          |          ❌          |         ✅         |
 | **Deployment, security and service**                                  |                     |                   |
 | Deployment                                                            |  Self hosted, CLI   |   Cloud service   |
@@ -45,7 +45,7 @@ An open-source CLI tool you can deploy and orchestrate to send Slack alerts and 
 | Social login with Google                                              |          ❌          |         ✅         |
 | SSO using OKTA / OneLogin / AD                                        |          ❌          |         ✅         |
 | Custom deployment options                                             |          ❌          |         ✅         |
-| 🚧 *Role based access control*                                        |          ❌          |         ✅         |
+| Role based access control                                        |          ❌          |         ✅         |
 | Support SLA                                                           |  Community support  |   24 hours SLA    |
 
 
