--- a/docs/cloud/onboarding/connect-data-warehouse.mdx
+++ b/docs/cloud/onboarding/connect-data-warehouse.mdx
@@ -1,15 +1,11 @@
-### Signup to Elementary cloud
-
-Anyone can [signup to Elementary Cloud](https://elementary-data.frontegg.com/oauth/account/sign-up) via Google SSO or by creating an account.
-
-<Note>
-  If you are interested in advanced authentication such as MFA, Okta SSO,
-  Microsoft AD - please contact us at cloud@elementary-data.com
-</Note>
+---
+title: "Connect data warehouse"
+icon: "square-3"
+---
 
 ### Create your first environment
 
-When you first login to Elementary cloud, it will not have any data.
+When you first login to Elementary, it will not have any data.
 
 You will be forwarded directly to the environments screen to create your first environment.
 Press `Create environment`, and provide an environment name:
@@ -35,20 +31,9 @@ Which data warehouse do you wish to connect?
 
 Elementary IP for allowlist: `3.126.156.226`
 
-### Need help with onboarding?
-
-We can provide [support on Slack](https://elementary-data.com/community) or hop on an [onboarding call](https://savvycal.com/MaayanSa/df29881c).
-
 ### What happens now?
 
 Once Elementary Cloud successfully connects to you data warehouse, it will start syncing data from the Elementary schema to cloud. This data includes tests results, run results, metadata and configuration.
 If you see data in the Elementary Dashboard you completed your connection (Congrats! 🎉).
 
 The syncs happen by default once an hour, but you can also [configure a triggered sync](/cloud/guides/sync-scheduling) to get a near real time experience.
-
-## What's next?
-
-1. [Invite your team](/cloud/manage-team) to Elementary cloud 👥
-2. [Connect Slack](/cloud/guides/enable-slack-alerts) for alerting 🔔
-3. [Connect your code repository](/cloud/integrations/code-repo/connect-code-repo) to add tests configuration from the cloud 🔌
-4. [Connect your BI tool](/cloud/integrations/bi/connect-bi-tool) to automatically extend the lineage to dashboards as exposures 🚀
