fixes to dimensions documentation

--- a/docs/data-tests/anomaly-detection-configuration/anomaly-params.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/anomaly-params.mdx
@@ -36,6 +36,9 @@ sidebarTitle: "All configuration params"
         &nbsp;&nbsp;&nbsp;&nbsp;<a href="/data-tests/anomaly-detection-configuration/detection-delay"><font color="#CD7D55">period: [hour | day | week | month]</font></a>
         &nbsp;&nbsp;&nbsp;&nbsp;<a href="/data-tests/anomaly-detection-configuration/detection-delay"><font color="#CD7D55">count: int</font></a>
 
+  dimension_anomalies, column_anomalies, all_columns_anomalies tests: 
+   -- <a href="/data-tests/anomaly-detection-configuration/dimensions"><font color="#CD7D55">dimensions: sql expression</font></a>
+
   volume_anomalies test:
    -- <a href="/data-tests/anomaly-detection-configuration/fail_on_zero"><font color="#CD7D55">fail_on_zero: [true | false]</font></a>
 
@@ -45,7 +48,7 @@ sidebarTitle: "All configuration params"
    -- <a href="/data-tests/anomaly-detection-configuration/exclude_regexp"><font color="#CD7D55">exclude_regexp: regex</font></a>
 
   dimension_anomalies test:
-   -- <a href="/data-tests/anomaly-detection-configuration/dimensions"><font color="#CD7D55">dimensions: sql expression</font></a>
+   -- <a href="/data-tests/anomaly-detection-configuration/exclude_final_results"><font color="#CD7D55">exclude_final_results: [SQL where expression on fields value / average]</font></a>
 
   event_freshness_anomalies:
    -- <a href="/data-tests/anomaly-detection-configuration/event_timestamp_column"><font color="#CD7D55">event_timestamp_column: column name</font></a>
