--- a/docs/data-tests/anomaly-detection-configuration/exclude-final-results.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/exclude-final-results.mdx
@@ -5,15 +5,15 @@ sidebarTitle: "exclude_final_results"
 
 `exclude_final_results: [SQL where expression on fields value / average]`
 
-Failures in dimension anomaly tests consist of outliers in row counts across all dimensions during the training period.
-Some dimensions may contribute metrics that are considered insignificant compared to others, and you may prefer not to receive alerts for them.
-With this parameter, you can disregard such failures.
+Failures in dimension anomaly tests consist of outliers in row count of each dimension.
+Some dimensions may be considered insignificant compared to others, and you may prefer not to receive alerts for them.
+With this parameter, you can exclude these dimensions from the results set and avoid such failures.
 
-1. `value` - Outlier row count of a dimension during the detection period.
+1. `value` - Max row count of a dimension during the detection period.
 2. `average` - The average rows count of a dimension during the training period.
 
 - _Supported values: valid SQL where expression on the columns value / average_
-- _Relevant tests: Dimension anomalies _
+- _Relevant tests: Dimension anomalies_
 
 <RequestExample>
 
