--- a/docs/cloud/integrations/code-repo/github.mdx
+++ b/docs/cloud/integrations/code-repo/github.mdx
@@ -4,7 +4,15 @@ title: "Github"
 
 Elementary connects to the code repository where your dbt project code is managed, and opens PRs with configuration changes.
 
+### Recommended: Connect using Elementary Elementary Github App
+
+Simply Click the blue button that says "Connect with Elementary Github App" and follow the instructions.
+In the menu that opens up later on, select the repository where your dbt project is stored, and if needed the branch and path to the dbt project.
+
 ### Create a Github [fine-grained token](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens#creating-a-fine-grained-personal-access-token)
+
+If for some reason you prefer to, you can connect to Github using a fine-grained token managed by your team instead.
+Here is how you can create one:
 
 1. In the upper-right corner of any page, click your profile photo, then click **Settings**.
 2. On the bottom of the left sidebar, click **Developer settings**.
