--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -6,12 +6,10 @@ icon: "fire"
 ---
 
 
-<a href="https://www.elementary-data.com/snowflake-summit-24" target="_blank">
- <div className="dark:#4A165C rounded-md p-0">
+<div className="dark:#4A165C rounded-md p-0">
   <img
-    src="https://res.cloudinary.com/diuctyblm/image/upload/v1716899940/Alerts/Snowflake%20summit.png"
-    alt="Snowflake summit banner"
-    noZoom
+    src="https://res.cloudinary.com/diuctyblm/image/upload/v1699193505/mintlify_header_eqa3jy.png"
+    alt="Elementary banner"
   />
 </div>
 </a>
@@ -19,7 +17,7 @@ Elementary includes two products:
 
 <Snippet file="quickstart/quickstart-cards.mdx" />
 
-See also the [detailed comparison](/overview/cloud-vs-oss) between Elementary and Elementary Community.
+See the [detailed comparison](/overview/cloud-vs-oss) between Elementary and Elementary Community.
 
 ## Get started with Elementary
 
