Fixed incorrect test name 'all_column_anomalies' in docs.

--- a/docs/data-tests/anomaly-detection-configuration/column-anomalies.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/column-anomalies.mdx
@@ -8,7 +8,7 @@ sidebarTitle: "column_anomalies"
 Select which monitors to activate as part of the test.
 
 - _Default: default monitors_
-- _Relevant tests: `all_column_anomalies`, `column_anomalies`_
+- _Relevant tests: `all_columns_anomalies`, `column_anomalies`_
 - _Configuration level: test_
 
 <RequestExample>
