--- a/docs/data-tests/anomaly-detection-configuration/exclude_regexp.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/exclude_regexp.mdx
@@ -8,7 +8,7 @@ sidebarTitle: "exclude_regexp"
 Param for the `all_columns_anomalies` test only, which enables to exclude a column from the tests based on regular expression match.
 
 - _Default: None_
-- _Relevant tests: `all_column_anomalies`_
+- _Relevant tests: `all_columns_anomalies`_
 - _Configuration level: test_
 
 <RequestExample>
