fixes to dimensions documentation

--- a/docs/cloud/introduction.mdx
+++ b/docs/cloud/introduction.mdx
@@ -10,5 +10,19 @@ The platform provides out-of-the-box monitoring for critical issues, tools to ef
 Elementary promotes ownership and collaboration on incidents, and enables the whole data organization to take an active role in the data quality process.
 By automatically measuring and tracking data health, it helps teams transition from reactive firefighting to proactively communicating data health to consumers and stakeholders.
 
-<Card title="When do I need a data observability platform? " href="/content/components/card-group">
+<Card title="When do I need a data observability platform? " href="/resources/business-case-data-observability-platform">
 </Card>
+
+
+## Features
+
+### Detection & Coverage
+
+
+### Triage
+
+
+### Incident management
+
+
+### Collaboration & Communication
