how it works snippet

--- a/docs/cloud/general/security-and-privacy.mdx
+++ b/docs/cloud/general/security-and-privacy.mdx
@@ -6,7 +6,7 @@ icon: "lock"
 
 ## Security highlights
 
-Our product is designed with security and compliance in mind.
+Our product is designed with security and privacy in mind.
 
 - Elementary Cloud does not have read access to raw data in your data warehouse.
 - Elementary Cloud only extracts and stores metadata, logs and aggregated metrics.
