--- a/docs/cloud/introduction.mdx
+++ b/docs/cloud/introduction.mdx
@@ -51,6 +51,8 @@ anomaly detection for unexpected behavior, and a single interface to manage it a
 
 ### Triage & Response
 
+TODO: pragraph
+
 <CardGroup cols={2}>
   <Card title="Data Lineage">
     Column level lineage that spans through sources, models and BI tools, enriched with monitoring results. Enables granular root cause and impact analysis. 
@@ -74,6 +76,8 @@ anomaly detection for unexpected behavior, and a single interface to manage it a
 
 ### Collaboration & Communication
 
+TODO: pragraph
+
 <CardGroup cols={2}>
   <Card title="Data Health Dashboard">
     Up to date dashboard with current status and trends of data issues. 
@@ -91,10 +95,15 @@ anomaly detection for unexpected behavior, and a single interface to manage it a
 </CardGroup>
 
 
-## Cloud Platform Architecture
+## Architecture and Security
 
+<Snippet file="cloud/how-it-works.mdx" />
 
-## Security and Privacy
+Our product is designed with [Security and Privacy](/cloud/general/security-and-privacy) in mind.
+
+<Check>
+**SOC 2 certification:** Elementary is SOC2 type II certified!
+</Check>
 
 
 ## How to Start? 
