how it works snippet

--- a/docs/cloud/introduction.mdx
+++ b/docs/cloud/introduction.mdx
@@ -51,7 +51,9 @@ anomaly detection for unexpected behavior, and a single interface to manage it a
 
 ### Triage & Response
 
-TODO: pragraph
+Detecting issues is just the first step to achieve data reliability. 
+Elementary offers tools to create an effective response plan, for faster recovery.
+This includes investigating issues root cause and impact, communicating issues to the relevant people, assigning owners to fix issues, keeping track of open incidents and more.
 
 <CardGroup cols={2}>
   <Card title="Data Lineage">
@@ -76,7 +78,10 @@ TODO: pragraph
 
 ### Collaboration & Communication
 
-TODO: pragraph
+The data team doesn’t live in a silo - You have many stakeholders.
+The only way to improve data trust is by bringing in more team members, users and stakeholders to the data health process.
+Elementary fosters collaboration by allowing you to easily share and communicate the status of issues, 
+the overall health of the data platform and progress made to improve it with the broader organization.
 
 <CardGroup cols={2}>
   <Card title="Data Health Dashboard">
@@ -107,3 +112,13 @@ Our product is designed with [Security and Privacy](/cloud/general/security-and-
 
 
 ## How to Start? 
+
+<Card
+title="Quick start"
+href="/quickstart"
+></Card>
+
+<Card
+title="Book a call with our team"
+href="https://cal.com/maayansa/elementary-intro-docs"
+></Card>
