--- a/docs/features/data-lineage/lineage.mdx
+++ b/docs/features/data-lineage/lineage.mdx
@@ -1,9 +1,9 @@
 ---
 title: End-to-End Data Lineage
-sidebarTitle: Data Lineage
+sidebarTitle: Lineage overview
 ---
 
-Elementary Cloud UI and Elementary OSS Report include a rich data lineage graph.
+Elementary offers a rich data lineage graph.
 The graph is enriched with the latest test results, to enable easy impact and root cause analysis of data issues.
 
 In Elementary Cloud lineage includes [Column Level Lineage](/features/column-level-lineage) and [BI integrations](/features/exposures-lineage#automated-bi-lineage).
