--- a/docs/features/data-lineage/column-level-lineage.mdx
+++ b/docs/features/data-lineage/column-level-lineage.mdx
@@ -12,13 +12,7 @@ Column level lineage is useful for answering questions such as:
 - Which downstream columns are actually impacted by a data quality issue?
 - Can we deprecate or rename a column?
 - Will changing this column impact a dashboard?
-
-<Frame>
-  <img
-    src="https://res.cloudinary.com/diuctyblm/image/upload/v1700474778/CLL-for-docs_bcsvcb.gif"
-    alt="Elementary Column Level Lineage"
-  />
-</Frame>
+- 
 
 ### Filter and highlight columns path
 
@@ -26,6 +20,16 @@ To help navigate graphs with large amount of columns per table, use the `...` me
 
 - **Filter**: Will show a graph of only the selected column and it's dependencies.
 - **Highlight**: Will highlight only the selected column and it's dependencies.
+
+<iframe
+width="700"
+height="400"
+src="https://res.cloudinary.com/diuctyblm/video/upload/v1710790204/colum-level-lineage-to-bi-better_c00lz0.mp4"
+frameborder="0"
+allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+allowfullscreen
+alt="Elementary Lineage"
+></iframe>
 
 ### Column level lineage generation
 
