--- a/docs/_snippets/cloud/features.mdx
+++ b/docs/_snippets/cloud/features.mdx
@@ -12,7 +12,7 @@ anomaly detection for unexpected behavior, and a single interface to manage it a
     Out-of-the-box volume and freshness, and opt-in for data quality metrics.
   </Card>
   <Card title="Data Tests">
-    Validate data and track the results of dbt tests, dbt packages tests (dbt-utils, dbt-expectations) and custom SQL tests.  
+    Validate data and track the results of dbt tests, dbt packages tests (dbt-utils, dbt-expectations, elementary) and custom SQL tests.  
   </Card>
   <Card title="Schema Validation">
     Validate there are no breaking changes in tables schema, JSON schema, and downstream exposures such as dashboards.  
