--- a/docs/changelog.mdx
+++ b/docs/changelog.mdx
@@ -198,6 +198,53 @@ description: "Significant new features and improvements to the Elementary cloud 
 
 </div>
 
+### Sync now
+
+<div style={{ display: "table", width: "auto" }}>
+    <div style={{ display: "table-row", width: "auto" }}>
+        <div style={{ float: "left", display: "table-column", width: "100%", marginBottom: "20px" }}>
+            <span
+                style={{ 
+                background: "#FECDD8",
+                color: "#BD134F",
+                borderRadius: "8px",
+                fontSize: ".8em",
+                padding: "2px 10px",
+                display: "inline-block",
+                fontWeight: "500",
+                letterSpacing: ".5px",
+                whiteSpace: "nowrap",
+                }}
+            >Tests</span>
+        </div>
+        <div
+            style={{
+            float: "left",
+            display: "table-column",
+            paddingLeft: "0px",
+            width: "100%",
+            marginTop: "-20px",
+            }}
+        >
+        We are excited to launch a new `Sync Now` button right in your environments page. You can think of is as a "refresh now" button for your environment.
+        If you introduced a change in your environment and you want to see it in Elementary immediately - just click ‘sync now’.
+
+        Here is what it looks like -
+
+        <video
+        autoPlay
+        muted
+        loop
+        playsInline
+        className="w-full aspect-video"
+        src="https://res.cloudinary.com/diuctyblm/video/upload/v1719320332/Changelog/sync_now2_qbb6n3.mp4"
+        ></video>
+
+        </div>
+    </div>
+
+</div>
+
 ## April 2024
 
 Following the features survey, we are proud to announce we released the features that were ranked at the top!
