--- a/docs/changelog.mdx
+++ b/docs/changelog.mdx
@@ -22,7 +22,7 @@ description: "Significant new features and improvements to the Elementary cloud 
                 letterSpacing: ".5px",
                 whiteSpace: "nowrap",
                 }}
-            >Tests</span>
+            >Test configuration</span>
         </div>
         <div
             style={{
@@ -68,7 +68,7 @@ description: "Significant new features and improvements to the Elementary cloud 
                 letterSpacing: ".5px",
                 whiteSpace: "nowrap",
                 }}
-            >Tests</span>
+            >Anomaly detection</span>
         </div>
         <div
             style={{
@@ -123,7 +123,7 @@ description: "Significant new features and improvements to the Elementary cloud 
                 letterSpacing: ".5px",
                 whiteSpace: "nowrap",
                 }}
-            >Tests</span>
+            >Lineage</span>
         </div>
         <div
             style={{
@@ -167,7 +167,7 @@ description: "Significant new features and improvements to the Elementary cloud 
                 letterSpacing: ".5px",
                 whiteSpace: "nowrap",
                 }}
-            >Tests</span>
+            >Test execution history</span>
         </div>
         <div
             style={{
@@ -215,7 +215,7 @@ description: "Significant new features and improvements to the Elementary cloud 
                 letterSpacing: ".5px",
                 whiteSpace: "nowrap",
                 }}
-            >Tests</span>
+            >Environments</span>
         </div>
         <div
             style={{
@@ -247,13 +247,6 @@ description: "Significant new features and improvements to the Elementary cloud 
 
 ## April 2024
 
-Following the features survey, we are proud to announce we released the features that were ranked at the top!
-
-If you were expecting other features - don't worry, April is not over yet...
-
-We are looking forward for your feedback, and expect more updates soon :blush:
-
-The Elementary team.
 
 ### Status and assignee for alerts 🔔
 
@@ -272,7 +265,7 @@ The Elementary team.
                 letterSpacing: ".5px",
                 whiteSpace: "nowrap",
                 }}
-            >Tests</span>
+            >Alerts</span>
         </div>
         <div
             style={{
@@ -315,7 +308,7 @@ The Elementary team.
                 letterSpacing: ".5px",
                 whiteSpace: "nowrap",
                 }}
-            >Tests</span>
+            >Test configuration</span>
         </div>
         <div
             style={{
@@ -354,7 +347,7 @@ The Elementary team.
                 letterSpacing: ".5px",
                 whiteSpace: "nowrap",
                 }}
-            >Tests</span>
+            >Dashboard</span>
         </div>
         <div
             style={{
@@ -393,7 +386,7 @@ The Elementary team.
                 letterSpacing: ".5px",
                 whiteSpace: "nowrap",
                 }}
-            >Tests</span>
+            >Lineage</span>
         </div>
         <div
             style={{
@@ -432,7 +425,7 @@ The Elementary team.
                 letterSpacing: ".5px",
                 whiteSpace: "nowrap",
                 }}
-            >Tests</span>
+            >Team</span>
         </div>
         <div
             style={{
