--- a/docs/features/data-lineage/column-level-lineage.mdx
+++ b/docs/features/data-lineage/column-level-lineage.mdx
@@ -1,6 +1,6 @@
 ---
 title: Column Level Lineage
-sidebarTitle: Column Level Lineage
+sidebarTitle: Column level lineage
 ---
 
 <Snippet file="cloud/cloud-feature-tag.mdx" />
