changed changelog description

--- a/docs/changelog.mdx
+++ b/docs/changelog.mdx
@@ -1,6 +1,6 @@
 ---
 title: Changelog
-description: "Significant new features and improvements to the Elementary cloud platform"
+description: "See what's new at Elementary"
 ---
 
 ## May 2024
@@ -246,7 +246,6 @@ description: "Significant new features and improvements to the Elementary cloud 
 </div>
 
 ## April 2024
-
 
 ### Status and assignee for alerts 🔔
 
