--- a/docs/features/anomaly-detection/monitors-overview.mdx
+++ b/docs/features/anomaly-detection/monitors-overview.mdx
@@ -13,26 +13,17 @@ Elementary offers two types of monitors:
 - **Automated Monitors** - Out-of-the-box monitors who are activated automatically, and query metadata only. 
 - **Opt-in Monitors** - Monitors who query raw data and require configuration.
 
-## [Automated monitors](/cloud/features/anomaly-detection/automated-monitors)
+## [Automated monitors](/features/anomaly-detection/automated-monitors)
 
 <Snippet file="cloud/features/anomaly-detection/automated-monitors-intro.mdx" />
 
-<CardGroup cols={2}>
-<Card title="Automated Freshness" href="/cloud/features/anomaly-detection/automated-monitors#freshness-monitor">
-  Monitors updates to tables and how frequently a table is updated, 
-  and fails if there is an unexpected delay. 
-</Card>
-<Card title="Automated Volume" href="/cloud/features/anomaly-detection/automated-monitors#volume-monitor">
-  Monitors how many rows were added or removed to a table on each update,
-  and fails if there is an unexpected drop or spike in rows. 
-</Card>
-</CardGroup>
+<Snippet file="cloud/features/anomaly-detection/automated-monitors-cards.mdx" />
 
 ## Opt-in monitors
 
 _Coming soon_
 
-## How monitors work?
+## How anomaly detection works?
 
 _🚧 Under construction 🚧_
 
